logs/rust_tools/creusot_verification_20260508_203428.log
=== CREUSOT VERIFICATION LOG ===
timestamp: 2026-05-08T20:34:28.982885
file: /home/slade/defi_guardian/defi_vault.rs

--- STDOUT ---


--- STDERR ---
    Updating crates.io index
   Compiling autocfg v1.5.0
   Compiling proc-macro2 v1.0.106
   Compiling libc v0.2.186
   Compiling quote v1.0.45
   Compiling unicode-ident v1.0.24
   Compiling getrandom v0.4.2
   Compiling cfg-if v1.0.4
   Compiling num-traits v0.2.19
   Compiling uuid v1.23.1
   Compiling syn v2.0.117
    Checking num-integer v0.1.46
    Checking num-bigint v0.4.6
    Checking num-rational v0.4.2
   Compiling pearlite-syn v0.11.0-dev (/home/slade/creusot/pearlite-syn)
   Compiling creusot-std-proc v0.11.0-dev (/home/slade/creusot/creusot-std-proc)
    Checking creusot-std v0.11.0-dev (/home/slade/creusot/creusot-std)
    Checking creusot_verify v0.1.0 (/tmp/tmppwzxrt18)
error: an inner attribute is not permitted in this context
  --> src/lib.rs:9:1
   |
 9 | #![allow(dead_code)]
   | ^^^^^^^^^^^^^^^^^^^^
...
12 | use std::cmp::min;
   | ------------------ the inner attribute doesn't annotate this `use` import
   |
   = note: inner attributes, like `#![no_std]`, annotate the item enclosing them, and are usually found at the beginning of source files
help: to annotate the `use` import, change the attribute from inner to outer style
   |
 9 - #![allow(dead_code)]
 9 + #[allow(dead_code)]
   |

error: an inner attribute is not permitted in this context
  --> src/lib.rs:10:1
   |
10 | #![allow(unused_variables)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
11 |
12 | use std::cmp::min;
   | ------------------ the inner attribute doesn't annotate this `use` import
   |
   = note: inner attributes, like `#![no_std]`, annotate the item enclosing them, and are usually found at the beginning of source files
help: to annotate the `use` import, change the attribute from inner to outer style
   |
10 - #![allow(unused_variables)]
10 + #[allow(unused_variables)]
   |

error: cannot find attribute `pure` in this scope
  --> src/lib.rs:59:38
   |
59 |     #[cfg_attr(any(prusti, creusot), pure)]
   |                                      ^^^^

error: cannot find attribute `pure` in this scope
  --> src/lib.rs:67:38
   |
67 |     #[cfg_attr(any(prusti, creusot), pure)]
   |                                      ^^^^

error: cannot find attribute `pure` in this scope
  --> src/lib.rs:73:38
   |
73 |     #[cfg_attr(any(prusti, creusot), pure)]
   |                                      ^^^^

error: cannot find attribute `pure` in this scope
  --> src/lib.rs:79:38
   |
79 |     #[cfg_attr(any(prusti, creusot), pure)]
   |                                      ^^^^

error: cannot find attribute `pure` in this scope
   --> src/lib.rs:308:38
    |
308 |     #[cfg_attr(any(prusti, creusot), pure)]
    |                                      ^^^^

error[E0659]: `Clone` is ambiguous
  --> src/lib.rs:20:10
   |
20 | #[derive(Clone, Debug)]
   |          ^^^^^ ambiguous name
   |
   = note: ambiguous because of a conflict between a name from a glob import and an outer scope during import or macro resolution
note: `Clone` could refer to the derive macro imported here
  --> src/lib.rs:6:5
   |
 6 | use creusot_std::prelude::*;
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `Clone` to disambiguate
   = help: or use `crate::Clone` to refer to this derive macro unambiguously
note: `Clone` could also refer to a derive macro from prelude
  --> /rustc/6a979b3e32522049d0acb4a47f7ae44b7c8abfd5/library/std/src/prelude/mod.rs:143:12

warning: unused import: `std::cmp::min`
  --> src/lib.rs:12:5
   |
12 | use std::cmp::min;
   |     ^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0659`.
warning: `creusot_verify` (lib) generated 1 warning
error: could not compile `creusot_verify` (lib) due to 8 previous errors; 1 warning emitted
